--- a/OtelMvcProject/OtelMvcProject.csproj
+++ b/OtelMvcProject/OtelMvcProject.csproj
@@ -212,6 +212,8 @@
     <Content Include="Views\Default\Index2.cshtml" />
     <Content Include="Views\Shared\_OtelVitrin.cshtml" />
     <Content Include="Views\Default\Hakkımızda.cshtml" />
+    <Content Include="Views\Default\PartialFooter.cshtml" />
+    <Content Include="Views\Default\PartialSosyalMedya.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
