--- a/OtelMvcProject/OtelMvcProject.csproj
+++ b/OtelMvcProject/OtelMvcProject.csproj
@@ -120,6 +120,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AnaSayfaController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\HizmetlerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -216,6 +217,8 @@
     <Content Include="Views\Default\PartialFooter.cshtml" />
     <Content Include="Views\Default\PartialSosyalMedya.cshtml" />
     <Content Include="Views\Hizmetler\Hizmet.cshtml" />
+    <Content Include="Views\AnaSayfa\AnaSayfa.cshtml" />
+    <Content Include="Views\AnaSayfa\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
