--- a/OtelMvcProject/OtelMvcProject.csproj
+++ b/OtelMvcProject/OtelMvcProject.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Controllers\iletisimController.cs" />
     <Compile Include="Controllers\KayitController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\RezervasyonController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -191,6 +192,19 @@
     <Content Include="hotels-starter\Register\images\tick.png" />
     <Content Include="hotels-starter\Register\index.html" />
     <Content Include="hotels-starter\Register\w3layouts-License.txt" />
+    <Content Include="hotels-starter\Rezervasyon\css\bootstrap.css" />
+    <Content Include="hotels-starter\Rezervasyon\css\jquery-ui.css" />
+    <Content Include="hotels-starter\Rezervasyon\css\style.css" />
+    <Content Include="hotels-starter\Rezervasyon\images\arrow.png" />
+    <Content Include="hotels-starter\Rezervasyon\images\date-icon.png" />
+    <Content Include="hotels-starter\Rezervasyon\images\terrace.jpg" />
+    <Content Include="hotels-starter\Rezervasyon\index.html" />
+    <Content Include="hotels-starter\Rezervasyon\js\easing.js" />
+    <Content Include="hotels-starter\Rezervasyon\js\jquery-ui.js" />
+    <Content Include="hotels-starter\Rezervasyon\js\jquery.flexslider.js" />
+    <Content Include="hotels-starter\Rezervasyon\js\jquery.min.js" />
+    <Content Include="hotels-starter\Rezervasyon\js\move-top.js" />
+    <Content Include="hotels-starter\Rezervasyon\w3layouts-License.txt" />
     <Content Include="hotels-starter\services.html" />
     <Content Include="hotels-starter\starter-license-W3Layouts.txt" />
     <Content Include="Scripts\bootstrap.js" />
@@ -243,6 +257,7 @@
     <Content Include="Views\iletisim\Index.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Kayit\KayitOl.cshtml" />
+    <Content Include="Views\Rezervasyon\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
