--- a/OtelMvcProject/OtelMvcProject.csproj
+++ b/OtelMvcProject/OtelMvcProject.csproj
@@ -157,6 +157,9 @@
     <Compile Include="Models\Entity\TblHakkimda.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entity\Tbliletisim.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
