--- a/OtelMvcProject/OtelMvcProject.csproj
+++ b/OtelMvcProject/OtelMvcProject.csproj
@@ -305,6 +305,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Kayit\KayitOl.cshtml" />
     <Content Include="Views\Rezervasyon\Index.cshtml" />
+    <Content Include="Views\iletisim\MesajGonder.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
