--- a/OtelMvcProject/OtelMvcProject.csproj
+++ b/OtelMvcProject/OtelMvcProject.csproj
@@ -164,6 +164,9 @@
     <Compile Include="Models\Entity\TblMesaj.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entity\TblMesaj2.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Entity\TblMisafir.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
