--- a/OtelMvcProject/OtelMvcProject.csproj
+++ b/OtelMvcProject/OtelMvcProject.csproj
@@ -412,6 +412,7 @@
     <Content Include="Views\Misafir\GidenMesajlar.cshtml" />
     <Content Include="Views\Misafir\MesajDetay.cshtml" />
     <Content Include="Views\Misafir\YeniMesaj.cshtml" />
+    <Content Include="Views\Default\Ekibimiz.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
